Thêm tùy chọn "Đã ký hợp đồng" vào nhóm radio trong file index.html để mở rộng lựa chọn cho người dùng.

--- a/index.html
+++ b/index.html
@@ -226,6 +226,10 @@
                         <input type="radio" name="dich_vu_1" value="Không" class="form-radio h-5 w-5 text-indigo-600">
                         <span class="ml-2">Không</span>
                     </label>
+                    <label class="flex items-center text-gray-700 cursor-pointer">
+                        <input type="radio" name="dich_vu_1" value="Đã ký hợp đồng" class="form-radio h-5 w-5 text-indigo-600">
+                        <span class="ml-2">Đã ký hợp đồng</span>
+                    </label>
                 </div>
                 <div id="quantity_1" class="mt-4 hidden">
                     <label for="so_luong_1" class="block text-sm font-medium text-gray-700">Số lượng:</label>
