Loại bỏ nút xem bản đồ heatmap trong file index.html bằng cách bình luận lại mã HTML, nhằm tạm thời vô hiệu hóa chức năng này mà không xóa hoàn toàn mã nguồn.

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                     </path>
                                 </svg>
                             </button>
-                            <button type="button" onclick="window.open('/map', '_blank')"
+                            <!-- <button type="button" onclick="window.open('/map', '_blank')"
                                 class="mt-1 px-3 py-2 bg-green-500 text-white rounded-md hover:bg-green-600 transition-colors"
                                 title="Xem bản đồ heatmap">
                                 <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -177,7 +177,7 @@
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z">
                                     </path>
                                 </svg>
-                            </button>
+                            </button> -->
                             </div>
                     </div>
                 </div>
